--- a/src/client/app/components/home/home.component.tns.html
+++ b/src/client/app/components/home/home.component.tns.html
@@ -1,7 +1,7 @@
 <ActionBar [title]="'语音播报'" class="action-bar">
     <NavigationButton [text]="'任务大厅'"></NavigationButton>
 </ActionBar>
-<ScrollView>
+<ScrollView (scroll)="onScroll($event)">
     <ListView [items]="tasks" row="1" colSpan="2" height="500">
         <ng-template let-item="item" let-i="index" let-odd="odd" let-even="even">
             <StackLayout orientation="vertical">
@@ -13,3 +13,4 @@
         </ng-template>
     </ListView>
 </ScrollView>
+<Label [text]="warning"></Label>
