--- a/src/client/app/components/home/home.component.tns.html
+++ b/src/client/app/components/home/home.component.tns.html
@@ -9,4 +9,13 @@
     <Button class="btn btn-primary btn-active" text="flexbox column " (tap)="onTap(['test/layouts/flexbox-column'])"></Button>
     <Button class="btn btn-primary btn-active" text="flexbox row reverse" (tap)="onTap(['test/layouts/flexbox-row-reverse'])"></Button>
     <Button class="btn btn-primary btn-active" text="flexbox row" (tap)="onTap(['test/layouts/flexbox-row'])"></Button>
+
+    <Button class="btn btn-primary btn-active" text="flexbox flex-end" (tap)="onTap(['test/layouts/flexbox-flex-end'])"></Button>
+    <Button class="btn btn-primary btn-active" text="flexbox multi" (tap)="onTap(['test/layouts/flexbox-multi'])"></Button>
+    <Button class="btn btn-primary btn-active" text="flexbox order" (tap)="onTap(['test/layouts/flexbox-order'])"></Button>
+    <Button class="btn btn-primary btn-active" text="flexbox space around" (tap)="onTap(['test/layouts/flexbox-space-around'])"></Button>
+    <Button class="btn btn-primary btn-active" text="flexbox space between" (tap)="onTap(['test/layouts/flexbox-space-between'])"></Button>
+    <Button class="btn btn-primary btn-active" text="flexbox wrap" (tap)="onTap(['test/layouts/flexbox-wrap'])"></Button>
+    <Button class="btn btn-primary btn-active" text="flexbox wrap reserve" (tap)="onTap(['test/layouts/flexbox-wrap-reserve'])"></Button>
+
 </FlexboxLayout>
