--- a/src/client/app/components/demo/layouts/dock-layout/dock-layout.tns.html
+++ b/src/client/app/components/demo/layouts/dock-layout/dock-layout.tns.html
@@ -1,5 +1,5 @@
-<ActionBar [title]="'组件'" class="action-bar">
-    <NavigationButton [text]="'dock layout'"></NavigationButton>
+<ActionBar [title]="'码头布局'" class="action-bar">
+    <NavigationButton [text]="'布局'"></NavigationButton>
 </ActionBar>
 
 <DockLayout stretchLastChild="true">
