--- a/src/client/app/components/demo/layouts/absolute-layout/absolute-layout.component.tns.html
+++ b/src/client/app/components/demo/layouts/absolute-layout/absolute-layout.component.tns.html
@@ -1,8 +1,6 @@
-<ActionBar [title]="'组件'" class="action-bar">
-    <NavigationButton [text]="'absolute layout'"></NavigationButton>
+<ActionBar [title]="'绝对布局'" class="action-bar">
+    <NavigationButton [text]="'布局'"></NavigationButton>
 </ActionBar>
-
-
 <AbsoluteLayout width="210" height="210" backgroundColor="lightgray">
     <Label text="10, 10" left="10" top="10" width="90" height="90" backgroundColor="red"></Label>
     <Label text="110, 10" left="110" top="10" width="90" height="90" backgroundColor="green"></Label>
