--- a/src/client/app/components/demo/components/components/components.tns.html
+++ b/src/client/app/components/demo/components/components/components.tns.html
@@ -1,3 +1,4 @@
 <FlexboxLayout flexDirection="column">
     <Button class="btn btn-primary btn-active" text="label(label)" (tap)="onTap(['test/components/label'])"></Button>
+    <Button class="btn btn-primary btn-active" text="图片(image)" (tap)="onTap(['test/components/image'])"></Button>
 </FlexboxLayout>
